--- a/global.css
+++ b/global.css
@@ -655,6 +655,9 @@ body h1 {
     margin-top: auto;
     padding-top: 1rem;
 }
+.newsbox_img h3 {
+    
+}
 .event_date {
     margin: 0;
     position: absolute;
@@ -662,8 +665,9 @@ body h1 {
     top: -0.4rem;
     right: 2%;
     z-index: 99 ;
-    font-weight: 600;
+    font-weight: 500;
     color: var(--white);
+    font-size: 1.3rem;
 }
 .celso {        
     width: 100%;
