--- a/global.css
+++ b/global.css
@@ -363,7 +363,7 @@ footer {
 .contact_us, .csm_spes .links a:nth-child(1) {
     margin: 1rem 0;
 }
-.open_hours p, .contact_us p, .boxmargin .item_l, .boxmargin .ho_day_t{
+.open_hours p, .contact_us p, .boxmargin .item_l, .boxmargin .ho_day_t , .margin02rem{
     margin: 0.2rem;
 }
 .item {
@@ -800,6 +800,11 @@ body h1 {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+/* Contact us page */
+.message_input {
+    width: 100%;
 }
 
 
