--- a/global.css
+++ b/global.css
@@ -158,6 +158,7 @@ p {
 .flexwrap { /*used for explore section in visit us page */
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
 .grid3fit {
     display: grid;
@@ -339,6 +340,7 @@ button {
 /*footer code */
 footer {
     border-top: 1px solid var(--dark_black);
+    margin-bottom: 3rem;
 }
 .f_boxes {
     display: flex;
@@ -368,7 +370,7 @@ footer {
 }
 .item {
     display: flex;
-    justify-content:flex-start;
+    justify-content:space-between;
     align-items: center;
 }
 .ho_day_t {
