--- a/global.css
+++ b/global.css
@@ -66,6 +66,9 @@ body {
 .text_white {
     color: var(--white);
 }
+.text_green {
+    color: var(--green_logo_color);
+}
 .dark_background {
     background-color: var(--dark_black);
     width: 100%;
