--- a/css/_flex_grids.css
+++ b/css/_flex_grids.css
@@ -16,6 +16,12 @@
         flex-wrap: wrap;
         justify-content: center;
     }
+    .flexcenter {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
 
 /* Grids */
     .grid3fit {
