--- a/css/_globalstyles.css
+++ b/css/_globalstyles.css
@@ -10,13 +10,13 @@
 
 html {
     background-color: var(--creamwhite);
-    font-family: "Dosis", Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Dosis', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 16px;
     position: relative;
 }
 body {
     margin: 0px;
-    font-family: "Epilogue", Verdana, Geneva, Tahoma, sans-serif;
+    font-family: "Epilogue", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: medium;
     background-color: var(--creamwhite);
     color: var(--dark_black);
@@ -41,7 +41,7 @@ a {
 }
 
 p {
-    font-family: Dosis, Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Dosis', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 400;
 }
 
